BUGFIX-1178: clipping issue on iframe

--- a/widget/config/assets/styles.css
+++ b/widget/config/assets/styles.css
@@ -397,7 +397,7 @@ label input, select, .pointer {
   }
 }
 
-@media (max-width: 500px) {
+@media (max-width: 650px) {
   .widget-config__content--flex {
     flex-direction: row;
     flex-wrap: wrap;
